--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hardhat": "^2.12.2",
     "hardhat-contract-sizer": "^2.6.1",
     "keccak256": "^1.0.6",
-    "mocha-steps": "^1.3.0"
+    "mocha-steps": "^1.3.0",
+    "@uniswap/v2-core": "^1.0.1"
   }
 }
